<resources>
    <string name="app_name">MySchedule</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Иванов Иван</string>
    <string name="nav_header_subtitle">ivanovivan@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_profile">Профиль</string>
    <string name="action_exit">Выход</string>

    <string name="menu_home">Расписание</string>
    <string name="menu_gallery">Администрация</string>
    <string name="menu_slideshow">Образцы заявлений</string>
    <string name="menu_disc">Дисциплины</string>
    <string name="menu_admen">Панель администратора</string>
    <string name="menu_profile">Профиль</string>
    <string name="title_activity_login">Вход</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_group">Название группы</string>
    <string name="prompt_id_group">id группы</string>
    <string name="prompt_fio">ФИО</string>
    <string name="action_sign_in">Вход</string>
    <string name="action_registr">Регистрация</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">"Успешно!"</string>
    <string name="invalid_username">Не правильный логин</string>
    <string name="invalid_password">Пароль должен быть длиннее 8-ми символов</string>
    <string name="login_failed">"Вход неудался"</string>

    <string name="un_id">ID</string>
    <string name="un_fio">ФИО</string>
    <string name="admin_doljn">Должность</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>