<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myschedule.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myschedule.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myschedule.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" >
        <action
            android:id="@+id/action_nav_slideshow_to_nav_doc_detail"
            app:destination="@id/nav_doc_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_admen"
        android:name="com.example.myschedule.ui.admin.AdminFragment"
        android:label="@string/menu_admen"
        tools:layout="@layout/fragment_admin" />

    <fragment
        android:id="@+id/nav_doc_detail"
        android:name="com.example.myschedule.ui.doc.DocDetailFragment"
        tools:layout="@layout/fragment_doc_detail" >
        <argument
            android:name="doc_name"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.myschedule.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>